--- a/labs_1_sem/lab1/CMakeLists.txt
+++ b/labs_1_sem/lab1/CMakeLists.txt
@@ -4,7 +4,7 @@ project(MyStringProject)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(main_exe 
+add_executable(MyStringProject 
     main.cpp 
     MyString.cpp 
     MyString.h
